--- a/etc/telegraf/telegraf.d/telegraf-input.conf
+++ b/etc/telegraf/telegraf.d/telegraf-input.conf
@@ -1,48 +1,57 @@
-# Read metrics about docker containers
-[[inputs.docker]]
-  ## Docker Endpoint
-  ##   To use TCP, set endpoint = "tcp://[ip]:[port]"
-  ##   To use environment variables (ie, docker-machine), set endpoint = "ENV"
-  endpoint = "unix:///var/run/docker.sock"
+# Read metrics about CPU usage
+[[inputs.cpu]]
+  ## Whether to report per-cpu stats or not
+  percpu = true
+  ## Whether to report total system cpu stats or not
+  totalcpu = true
+  ## Comment this line if you want the raw CPU time metrics
+  fielddrop = ["time_*"]
 
-  ## Set to true to collect Swarm metrics(desired_replicas, running_replicas)
-  gather_services = false
+# Read metrics about disk usagee
+[[inputs.disk]]
+  ## By default, telegraf gather stats for all mountpoints.
+  ## Setting mountpoints will restrict the stats to the specified mountpoints.
+  mount_points = ["/"]
 
-  ## Only collect metrics for these containers, collect all if empty
-  container_names = []
+  ## Ignore some mountpoints by filesystem type. For example (dev)tmpfs (usually
+  ## present on /run, /var/run, /dev/shm or /dev).
+  ignore_fs = ["tmpfs", "devtmpfs"]
 
-  ## Containers to include and exclude. Globs accepted.
-  ## Note that an empty array for both will include all containers
-  container_name_include = []
-  container_name_exclude = []
+# Read metrics about network usage
+[[inputs.net]]
+  interfaces = [ "eth0" ]
+  fielddrop = [ "icmp*", "ip*", "tcp*", "udp*" ]
 
-  ## Container states to include and exclude. Globs accepted.
-  ## When empty only containers in the "running" state will be captured.
-  # container_state_include = []
-  # container_state_exclude = []
+# Read metrics about memory usage
+[[inputs.mem]]
+ #
 
-  ## Timeout for docker list, info, and stats commands
-  timeout = "5s"
+# Read metrics about swap memory usage
+[[inputs.swap]]
+  #
 
-  ## Whether to report for each container per-device blkio (8:0, 8:1...) and
-  ## network (eth0, eth1, ...) stats or not
-  perdevice = true
-  ## Whether to report for each container total blkio and network stats or not
-  total = false
-  ## Which environment variables should we use as a tag
-  ##tag_env = ["JAVA_HOME", "HEAP_SIZE"]
+# Read metrics about system load & uptime
+[[inputs.system]]
+# no configuration
 
-  ## docker labels to include and exclude as tags.  Globs accepted.
-  ## Note that an empty array for both will include all labels as tags
-  docker_label_include = []
-  docker_label_exclude = []
 
-  ## Optional TLS Config
-  # tls_ca = "/etc/telegraf/ca.pem"
-  # tls_cert = "/etc/telegraf/cert.pem"
-  # tls_key = "/etc/telegraf/key.pem"
-  ## Use TLS but skip chain & host verification
-  # insecure_skip_verify = false
+# Get the number of processes and group them by status
+[[inputs.processes]]
+# no configuration
+
+# Get kernel statistics from /proc/stat
+[[inputs.kernel]]
+# no configuration
+
+[[inputs.netstat]]
+  # no configuration
+
+[[inputs.interrupts]]
+  # no configuration
+
+[[inputs.linux_sysctl_fs]]
+  # no configuration
+
 
 
 ###############################################################################
@@ -61,7 +70,7 @@
   # urls = ["http://127.0.0.1:8086"]
 
   ## The target database for metrics; will be created as needed.
-  database = docker_metrics
+  database = "telegraf_metrics"
   # database = "telegraf"
 
   ## If true, no CREATE DATABASE queries will be sent.  Set to true when using
