--- a/etc/telegraf/telegraf.d/telegraf-input.conf
+++ b/etc/telegraf/telegraf.d/telegraf-input.conf
@@ -90,8 +90,8 @@
   # timeout = "5s"
 
   ## HTTP Basic Auth
-  username = "${INFLUXDB_ADMIN_USER}"
-  password = "${INFLUXDB_ADMIN_PASSWORD}"
+  username = "$INFLUXDB_ADMIN_USER"
+  password = "$INFLUXDB_ADMIN_PASSWORD"
   # username = "telegraf"
   # password = "metricsmetricsmetricsmetrics"
 
